address pr comments
Signed-off-by: Atanas Atanasov <a.v.atanasov98@gmail.com>